fix issue where proposal status pills were not showing up on netlify. Also fix bug where vote count on vote cards was always the for count

--- a/packages/nouns-webapp/src/components/ProposalStatus/ProposalStatus.module.css
+++ b/packages/nouns-webapp/src/components/ProposalStatus/ProposalStatus.module.css
@@ -3,12 +3,12 @@
   color: white;
   border-radius: 8px;
   font-size: 14px;
-  opacity: 100%;
   border: 0rem;
   padding-left: 0.65rem;
   padding-right: 0.65rem;
   padding-top: 0.36rem;
   padding-bottom: 0.36rem;
+  width: fit-content;
 }
 
 .primary {
